--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -69,8 +69,8 @@
     <b>{{aluno.get_social_help_text }}</b> {{ aluno.social|linebreaks }}<br>
   {% endif %}   {% endcomment %}
 
-  {% if aluno.entidade %}
-    <b>{{aluno.get_entidade_help_text }}</b> {{ aluno.entidade|linebreaks }}<br>
+  {% if aluno.atividades %}
+    <b>{{aluno.get_atividades_help_text }}</b> {{ aluno.atividades|linebreaks }}<br>
   {% endif %}
 
   {% if aluno.familia %}
