--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -415,9 +415,9 @@
         {% if estudante.trabalhou %}
         <b>Você já trabalhou/trabalha/estagiou/estagia/empreende em alguma empresa?</b><br>
         {{estudante.trabalhou|linebreaks}}<br>{% endif %}
-        {% if estudante.entidade %}
+        {% if estudante.atividades %}
         <b>Você já participou de alguma entidade estudantil/IC/IT/Ninja/etc ou atividades sociais?</b><br>
-        {{estudante.entidade|linebreaks}}<br>{% endif %}
+        {{estudante.atividades|linebreaks}}<br>{% endif %}
         {% if estudante.familia %}
         <b>Você possui familiares em alguma empresa que está aplicando? Ou empresa concorrente direta?</b><br>
         {{estudante.familia|linebreaks}}<br>{% endif %}
