--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -34,12 +34,11 @@
     </a>
   </span>
 
-    <div id="atualizar">
+  <div id="atualizar">
 
-    {% if bancas %}
-
-        <table id="BancasTable" class="table table-borderless table-sm arredondado"><tbody>
-          {% for banca in bancas %} 
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
+      <table id="BancasTable" class="table table-borderless table-sm arredondado mb-1"><tbody>
+        {% for banca in bancas %} 
           <tr class="item {{banca.composicao.exame}}">
             <td>
 
@@ -131,11 +130,12 @@
               <div class="agendamento">
                 <div>
                   <b>{% lng "Mensagem:" "Message:" %}</b>
-                  <a data-toggle="tooltip" data-html="true" animation="true" title="Janela de Mensagem" class="open-modal"
+                  {% comment %} checkbox {% endcomment %}
+                  <input type="checkbox" name="banca" value="{{banca.pk}}" class="ml-1" checked="checked" />
+                  <a data-toggle="tooltip" data-html="true" animation="true" title="Janela de Mensagem" class="open-modal ml-2 border border-info" style="padding: 0px 2px;"
                     data-url="{% url 'mensagem_email' 'banca' banca.pk %}" href="{% url 'mensagem_email' 'banca' banca.pk %}"> 
-                    {% lng "avaliadores" "examiners" %}
-                  </a>
-                <a href="{% url 'event_ics_export' banca.id %}">ics</a>
+                    {% lng "e-mail avaliadores" "e-mail examiners" %}</a>
+                  <a href="{% url 'event_ics_export' banca.id %}" class="ml-2 border border-info" style="padding: 0px 2px;">ics</a>
                 </div>
 
                 <div class="editar esconder">
@@ -153,13 +153,23 @@
 
             </td>
           </tr>
-          {% endfor %}
-        </tbody></table>
+        {% endfor %}
+      </tbody></table>
 
-    {% else %}
-      {% lng "Não existem bancas definidas." "There are no defined examination boards." %}
-    {% endif %}
-    <p>&nbsp;</p>
+      <div class="mb-3">
+        {% if bancas %}
+          {% if request.user.eh_admin %}
+            <button onclick="return confirm('Você tem certeza que deseja enviar mensagem de bancas?');"
+             type="submit" class="btn btn-warning">
+              {% lng "Enviar Mensagem para Bancas Selecionadas" "Send Message to Selected Examination Boards" %}
+            </button>
+          {% endif %}
+        {% else %}
+          {% lng "Não existem bancas definidas." "There are no defined examination boards." %}
+        {% endif %}
+      </div>
+
+    </form>
 
     <h4>{% lng "Calendário" "Calendar" %}</h4>
     {% include "calendario_bancas.html" %}
@@ -177,7 +187,6 @@
     </div>
 
   </div>
-
   
   <script>
     // Callback function when #tipo_banca changes
