--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -17,87 +17,82 @@
   {% if bancas %}
     {% for banca in bancas.reverse %} 
       <div class="div_arredondado">
-          {% if banca.startDate %}
-            <b>
-              {% lng "Horário:" "Time:" %}
-            </b> {{banca.startDate.date}} ({{banca.startDate|date:"l"}}) das {{banca.startDate.time}}
-          {% endif %}
-          {% if banca.endDate %}
-            às {{banca.endDate.time}}
-          {% endif %}
-          <div>
-            <b>{% lng "Tipo:" "Type:" %}</b> 
-            {% lng banca.composicao.exame.titulo banca.composicao.exame.titulo_en %}
-          </div>
-          
-          {% include "cabecalho_projeto.html" with projeto=banca.get_projeto com_email=True com_semestre=True %}
-        
-          {% if banca.location %}
-            <div style="margin-top: 0px;"><b>Local:</b> {{banca.location}}</div>
-          {% endif %}
-
-          <div class="mt-2">
-            <b>{% lng "Membros da Banca:" "Examination Board Members:" %}</b>
-            {% include "membros_da_banca.html" %}
-
-            {% if user.tipo_de_usuario != 1 or banca|exibe_notas_banca %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
-              {% with avaliacao=banca.get_avaliacoes_bancas %}
-                {% if avaliacao.objetivos %}
-                  <hr>
-                  <b>{% lng "Média dos Conceitos da Banca" "Board's Average Grades" %}:</b><br>
-                  {% for objetivo, avaliacao in avaliacao.objetivos.items %}
-                    &nbsp;&#x21A3; {{objetivo.titulo}}: 
-                      {% if banca.alocacao %} {% comment %} PROBATION {% endcomment %}
-                        {% if avaliacao.0 >= 5 %}
-                          <span style="color: green;">
-                            {% lng "Suficiente" "Sufficient" %}
-                          </span>
-                        {% else %}
-                          <span style="color: red;">
-                            {% lng "Insuficiente" "Insufficient" %}
-                          </span>
-                        {% endif %}
-                      {% else %}
-                        {% if avaliacao.0 >= 5 %}
-                          <span style="color: black;">{{avaliacao.0|floatformat:2}}</span>
-                        {% else %}
-                          <span style="color: red;">{{avaliacao.0|floatformat:2}}</span>
-                        {% endif %}
-                      {% endif %}
-                    <br>
-                  {% endfor %}
-                  {% if avaliacao.peso > 0 %}
-                    &#10149;
-                    <b> 
-                      {% lng "Nota final" "Final Grade" %}
-                      = {{avaliacao.nota|floatformat:2}}
-                    </b><br>
-                  {% endif %}
-                {% endif %}
-
-                {% with observacoes_estudantes=banca.get_observacoes_estudantes %}
-                  {% if observacoes_estudantes %}
-                    <b style="display: inline-block; margin-top: 14px;">
-                      {% lng "Observações realizadas pelos membros da banca:" "Observations made by the examination board members:" %}
-                    </b>
-                    {% for observacao in observacoes_estudantes %}
-                      {% if observacao.observacoes_estudantes %}
-                      <div class="pintern" style="padding: 6px;">
-                          <b>{{observacao.avaliador.get_full_name}}</b>:<br>
-                          {{observacao.observacoes_estudantes|linebreaks}}
-                      </div>
-                      {% endif %}
-                    {% endfor %}
-                  {% endif %}      
-                {% endwith %}
-     
-              {% endwith %}
-            {% endif %}
-          </div>
-
-          
+        {% if banca.startDate %}
+          <b>{% lng "Horário:" "Time:" %}</b> {% lng_dl_de_ate banca.startDate banca.endDate %}
+        {% endif %}
+        <div>
+          <b>{% lng "Tipo:" "Type:" %}</b> 
+          {% lng banca.composicao.exame.titulo banca.composicao.exame.titulo_en %}
         </div>
-      {% endfor %}
+        
+        {% include "cabecalho_projeto.html" with projeto=banca.get_projeto com_email=True com_semestre=True %}
+      
+        {% if banca.location %}
+          <div style="margin-top: 0px;"><b>Local:</b> {{banca.location}}</div>
+        {% endif %}
+
+        <div class="mt-2">
+          <b>{% lng "Membros da Banca:" "Examination Board Members:" %}</b>
+          {% include "membros_da_banca.html" %}
+
+          {% if user.tipo_de_usuario != 1 or banca|exibe_notas_banca %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
+            {% with avaliacao=banca.get_avaliacoes_bancas %}
+              {% if avaliacao.objetivos %}
+                <hr>
+                <b>{% lng "Média dos Conceitos da Banca" "Board's Average Grades" %}:</b><br>
+                {% for objetivo, avaliacao in avaliacao.objetivos.items %}
+                  &nbsp;&#x21A3; {{objetivo.titulo}}: 
+                    {% if banca.alocacao %} {% comment %} PROBATION {% endcomment %}
+                      {% if avaliacao.0 >= 5 %}
+                        <span style="color: green;">
+                          {% lng "Suficiente" "Sufficient" %}
+                        </span>
+                      {% else %}
+                        <span style="color: red;">
+                          {% lng "Insuficiente" "Insufficient" %}
+                        </span>
+                      {% endif %}
+                    {% else %}
+                      {% if avaliacao.0 >= 5 %}
+                        <span style="color: black;">{{avaliacao.0|floatformat:2}}</span>
+                      {% else %}
+                        <span style="color: red;">{{avaliacao.0|floatformat:2}}</span>
+                      {% endif %}
+                    {% endif %}
+                  <br>
+                {% endfor %}
+                {% if avaliacao.peso > 0 %}
+                  &#10149;
+                  <b> 
+                    {% lng "Nota final" "Final Grade" %}
+                    = {{avaliacao.nota|floatformat:2}}
+                  </b><br>
+                {% endif %}
+              {% endif %}
+
+              {% with observacoes_estudantes=banca.get_observacoes_estudantes %}
+                {% if observacoes_estudantes %}
+                  <b style="display: inline-block; margin-top: 14px;">
+                    {% lng "Observações realizadas pelos membros da banca:" "Observations made by the examination board members:" %}
+                  </b>
+                  {% for observacao in observacoes_estudantes %}
+                    {% if observacao.observacoes_estudantes %}
+                    <div class="pintern" style="padding: 6px;">
+                        <b>{{observacao.avaliador.get_full_name}}</b>:<br>
+                        {{observacao.observacoes_estudantes|linebreaks}}
+                    </div>
+                    {% endif %}
+                  {% endfor %}
+                {% endif %}      
+              {% endwith %}
+    
+            {% endwith %}
+          {% endif %}
+        </div>
+
+        
+      </div>
+    {% endfor %}
   
   {% else %}
     <p>
