--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -33,42 +33,34 @@
             <tr class="item">
               <td data-order="{{relatorio.data|date:"Ymd"}}">
                 {% if relatorio.data %}{{relatorio.data|date:"d/m/Y"}}{% endif %}
-                {% if relatorio.confidencial %}CONFIDENCIAL{% endif %}
+                {% if relatorio.confidencial %}{% lng "CONFIDENCIAL" "CONFIDENTIAL" %}{% endif %}
               </td>
               <td>{% if relatorio.anotacao %}{{relatorio.anotacao}}{% endif %}</td>
               <td>
                 {% if relatorio.projeto %}
-                  {% if user.prof_a %}
-                    <a href="{% url 'projeto_infos' relatorio.projeto.id %}">
-                  {% endif %}
-                  {{relatorio.projeto.organizacao}}, {{relatorio.projeto.get_titulo}}
-                  {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
-                  {% if user.prof_a %}
-                    </a>
-                  {% endif %}
+                  {% if user.prof_a %}<a href="{% url 'projeto_infos' relatorio.projeto.id %}">{% endif %}
+                    {{relatorio.projeto.get_titulo_org}}
+                    {% include "tipo_projeto.html" with projeto=relatorio.projeto %}
+                  {% if user.prof_a %}</a>{% endif %}
                 {% elif relatorio.organizacao %}
-                  {% if user.prof_a %}
-                    <a href="{% url 'organizacao_completo' relatorio.organizacao.id %}">
-                  {% endif %}
-                  {{relatorio.organizacao}}
-                  {% if user.prof_a %}
-                    </a>
-                  {% endif %}
+                  {% if user.prof_a %}<a href="{% url 'organizacao_completo' relatorio.organizacao.id %}">{% endif %}
+                    {{relatorio.organizacao}}
+                  {% if user.prof_a %}</a>{% endif %}
                 {% endif %}
               </td>
               <td class="text-center">
                   {% if relatorio.link%}
                     <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;"
                       href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                      <span class="texto-longo" style="width: 9em;">Link da Matéria</span>
-                      <span class="texto-curto" style="width: 3em;">Link</span>
+                      <span class="texto-longo"><div style="width: 9em;">{% lng "Link da Matéria" "Document Link" %}</div></span>
+                      <span class="texto-curto"><div style="width: 3em;">{% lng "Link" "Link" %}</div></span>
                     </a><br>
                   {% endif %}
                   {% if relatorio.documento%}
                     <a class="btn btn-light btn-outline-info btn-sm" 
                       href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                      <span class="texto-longo" style="width: 9em;">Cópia no Servidor</span>
-                      <span class="texto-curto" style="width: 3em;">Cópia</span>
+                      <span class="texto-longo"><div style="width: 9em;">{% lng "Cópia no Servidor" "Copy on Server" %}</div></span>
+                      <span class="texto-curto"><div style="width: 3em;">{% lng "Cópia" "Copy" %}</div></span>
                     </a>
                   {% endif %}
               </td>
