--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -19,7 +19,7 @@
       class="open-modal" style="cursor:pointer;"
       data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}">
         <i class="fas fa-plus"></i> 
-        {% lng "Cadastrar Nova Matéria" "Register New Document" %}
+        {% lng "Cadastrar Nova Entrada" "Register New Entry" %}
       </a>
     </span>
     {% include "base-modal.html" %}
@@ -52,7 +52,7 @@
                   {% if relatorio.link%}
                     <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;"
                       href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                      <span class="texto-longo"><div style="width: 9em;">{% lng "Link da Matéria" "Document Link" %}</div></span>
+                      <span class="texto-longo"><div style="width: 9em;">{% lng "Link do Documento" "Document Link" %}</div></span>
                       <span class="texto-curto"><div style="width: 3em;">{% lng "Link" "Link" %}</div></span>
                     </a><br>
                   {% endif %}
