--- a/professores/templates/professores/aulas_tabela.html
+++ b/professores/templates/professores/aulas_tabela.html
@@ -39,29 +39,13 @@
   </div>
 
   <script>
-    $("#usuario").on("changed.bs.select", function (e, clickedIndex, isSelected, previousValue) {
-      $.fn.dataTable.ext.search.push(
-        function(settings, data, dataIndex) {
-          Table = $("#AulasTable").DataTable();
-          if(Table && typeof Table.row === "function") {
-            // Somente mostra elemento selecionado
-            var val = $("#usuario").selectpicker("val");
-            return(val.includes($(table.row(dataIndex).node()).attr("data-user")));
-          }
-          return true;
-        }
-      );
-      $("#AulasTable").DataTable().draw();
-    });
-  </script>
-
-  {% include "edicoes_ajax.html" with tabela="Aulas" %}
-
-  <script>
+    {% include "seleciona_linha_tabelas.html" with select="usuario" tabela="Aulas" data="user" %}
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
     };
     window.onload = carrega_site
   </script>
+
+  {% include "edicoes_ajax.html" with tabela="Aulas" %}
 
 {% endblock %}
