pointer para documentos

--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -406,7 +406,7 @@
       {% if user.prof_a %}
         {% if projeto and projeto.organizacao %}
           <small class="esconder">
-            <a class="open-modal" data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}">&#10133;</a>
+            <a class="open-modal" style="cursor: pointer;" data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}">&#10133;</a>
           </small>
         {% endif %}
       {% endif %}
