tirando botões antigos de incluir usuários

--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -14,7 +14,7 @@
 {% block content %}
 
   <span class="esconder">
-    <a href="{% url "cadastrar_organizacao" %}">
+    <a href="{% url 'cadastrar_organizacao' %}">
       <i class="fas fa-plus"></i> 
       {% lng "Cadastrar Nova Organização" "Register New Organization" %}
     </a>
