--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -208,7 +208,7 @@
       }
 
       $.ajax({
-        url: "{% url "estrelas" %}",
+        url: "{% url 'estrelas' %}",
         data: {
           "organizacao": id,
           "estrelas": pos,
