organizando apresentação de nomes

--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -49,7 +49,7 @@
 
 {% block content %}
 
-  <div class="mb-2">{% lng "Projeto:" "Project:" %}{{projeto}}</div>
+  <div class="mb-2">{% lng "Projeto" "Project" %}: {{projeto}}</div>
 
   {% if user.eh_prof_a %}
     <span class="esconder">
