--- a/templates/generic_ml.html
+++ b/templates/generic_ml.html
@@ -22,6 +22,15 @@
       text-align: center;
       margin-bottom: 20px;
     }
+
+    .feedback-message-error {
+      font-size: 1.2rem;
+      font-weight: 500;
+      color: #F00;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
     .feedback-links {
       margin-top: 20px;
     }
@@ -56,7 +65,13 @@
         
         {% if mensagem %}
           <div class="feedback-message">
-            {{ mensagem|safe }}
+            {% lng mensagem.pt|safe mensagem.en|safe %}
+          </div>
+        {% endif %}
+
+        {% if mensagem_erro %}
+          <div class="feedback-message-error">
+            {% lng mensagem_erro.pt|safe mensagem_erro.en|safe %}
           </div>
         {% endif %}
 
