--- a/templates/generic_ml.html
+++ b/templates/generic_ml.html
@@ -2,7 +2,7 @@
 {% comment %}
   Desenvolvido para o Projeto Final de Engenharia
   Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-  Data: 21 de Abril de 2020
+  Data: 28 de Março de 2025
 {% endcomment %}
 
 {% block head %}
