--- a/templates/generic.html
+++ b/templates/generic.html
@@ -5,6 +5,12 @@
   Data: 21 de Abril de 2020
 {% endcomment %}
 
+{% comment %} NÃO DEVE MAIS SER USADO {% endcomment %}
+{% comment %} NÃO DEVE MAIS SER USADO {% endcomment %}
+{% comment %} NÃO DEVE MAIS SER USADO {% endcomment %}
+{% comment %} NÃO DEVE MAIS SER USADO {% endcomment %}
+
+{% comment %} 
 {% block head %}
   {% load linguas %}
   <style>
@@ -157,4 +163,5 @@
       </div>
     </div>
   </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
+
