--- a/academica/templates/academica/includes/bloco_orientador.html
+++ b/academica/templates/academica/includes/bloco_orientador.html
@@ -8,22 +8,22 @@
 {% load linguas %}
 
 {% if orientador %}
-  {% if user.prof_a %}
+  {% if user.eh_prof_a %}
     <a class="imprimir" href="{% url 'professor_detail' orientador.id %}">  {% comment %} target="_blank" {% endcomment %}
   {% endif %}
   {{ orientador }}
-  {% if user.prof_a %}</a>{% endif %}
+  {% if user.eh_prof_a %}</a>{% endif %}
   {% if coorientadores %}
   <small>
     <span class="coorientadores">
       <br>
       {% lng "coorientação" "co-advisoring" %}:
       {% for coorientador in coorientadores %}
-        {% if user.prof_a %}
+        {% if user.eh_prof_a %}
           <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
         {% endif %}
           {{coorientador.usuario.get_full_name}}
-        {% if user.prof_a %}</a>{% endif %}
+        {% if user.eh_prof_a %}</a>{% endif %}
         {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
         {% if not forloop.last %}; {% endif %}
       {% endfor %}
