--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -59,7 +59,7 @@
                           href="{{documento.link}}" target="_blank" rel="noopener noreferrer">
                           <span class="texto-curto" style="width: 6em;">{% lng "Relatório" "Report" %}<sup>B</sup></span>
                           <span class="texto-longo" style="width: 13em;">{% lng "Relatório" "Report" %}&nbsp;(DSpace)</span>
-                          {% if user.admin %}
+                          {% if user.eh_admin %}
                             <span class="open-modal" data-url="{% url 'biblioteca_link' %}{{documento.pk}}">
                               <i class="fas fa-pencil-alt"></i>
                             </span>
