--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -99,7 +99,7 @@
     {% include "tabelas_bottom.html" %}
   </div>
 
-  {% if user.admin %}
+  {% if user.eh_admin %}
     <span class="esconder">
       <a  href="#"
        class="open-modal" style="cursor:pointer;"
