--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-  {% if user.admin %}
+  {% if user.eh_admin %}
     <span class="esconder">
       <a href="#" class="open-modal" style="cursor:pointer;"
       data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
