--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
           <a href="{% url 'perfil' %}">{% lng "Perfil" "Profile" %}</a>
           <a href="{% url 'index' %}">{% lng "Página Geral" "General Page" %}</a>
           <a href="{% url 'calendario' %}">{% lng "Calendário" "Calendar" %}</a>
-          {% if not user.parc %}
+          {% if not user.eh_parc %}
             <a href="{% url 'index_estudantes' %}">{% lng "Área dos Estudantes" "Students' Area" %}</a>
           {% endif %}
         {% endif %}      
