--- a/templates/documento.html
+++ b/templates/documento.html
@@ -52,7 +52,7 @@
       {% endif %}
     {% endif %}
   {% endif %}
-  {% if request.user.admin %}
+  {% if request.user.eh_admin %}
     <a href="#" class="open-modal esconder" data-url="{% url 'adiciona_documento_tipo' documento.tipo_documento.sigla %}"> 
       <i class="fas fa-pencil-alt" style="font-size: 0.7em;"></i>
     </a>
