--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -54,7 +54,7 @@
         {% endif %}
       </div>
       
-      {% if user and user.admin %}
+      {% if user and user.eh_admin %}
         <a class="open-modal" data-url="{% url 'edita_documento' documento.id %}">&nbsp;<i class="fas fa-pencil-alt" style="font-size: 0.7em;"></i></a>
       {% endif %}
 
