--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -159,7 +159,7 @@
            = <span id="desvio"></span>
         </b><br>
       </div>
-      {% if user.admin %}
+      {% if user.eh_admin %}
         <br>
         <div style="padding-left: 46px"> 
           <a target="_blank" rel="noopener noreferrer" href="{% url 'blackboard_notas' ano_semestre %}">
