--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -117,7 +117,7 @@
     
   {% endif %}
 
-  {% if user.admin %}
+  {% if user.eh_admin %}
     <a href="{% url 'edita_usuario' parceiro.user.id %}">
       <button class="btn btn-primary" style="float: right;">Editar</button>
     </a>
