--- a/estudantes/templates/estudantes/includes/bloco_estudantes.html
+++ b/estudantes/templates/estudantes/includes/bloco_estudantes.html
@@ -11,23 +11,17 @@
   <ul class="grup_estud" style="padding-left: 18px;">
     {% for alocacao in grupo %}
       <li style="line-height: 1.0; margin-bottom: 0.5em;">
-        {% if pequeno %}
-          <small>
-        {% endif %}
+        {% if pequeno %}<small>{% endif %}
         {% if user.eh_prof_a %}
           <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">  {% comment %} target="_blank" {% endcomment %}
         {% endif %}
         {{alocacao.aluno.user.get_full_name}}
-        {% if user.eh_prof_a %}
-          </a>
-        {% endif %}
+        {% if user.eh_prof_a %}</a>{% endif %}
         <span class="curso">
           <span class="texto-longo">[{{ alocacao.aluno.curso2 }}]</span>
           <span class="texto-curto">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>  
         </span>
-        {% if pequeno %}
-          </small>
-        {% endif %}
+        {% if pequeno %}</small>{% endif %}
       </li>
     {% endfor %}
   </ul>
